--- a/videos/G2Yns7NUSq4.yml
+++ b/videos/G2Yns7NUSq4.yml
@@ -1,10 +1,8 @@
 # Contribution guide: https://github.com/watch-devtube/contrib
 
-# speaker:
-#   name: _____
-#   twitter: _____ # mandatory twitter handle; must not include @
-
-# tags: [____, _____, _____]
+speaker:
+  name: Daniel Shiffman
+  twitter: shiffman
 
 tags:
     - web
